# haskell-sandbox

./: .gitignore  shabf.hs  thanos.hs
PiH/ch1/: ex1.hs  ex4.hs
PiH/ch2/: ex4.hs
PiH/ch4/: ex1.hs  ex2.hs
QES/: .gitignore  Makefile  qes.hs
RWH/ch00/: KMinima.hs
Solarizer/: .gitignore  ChangeLog.md  Makefile  README.md  package.yaml  solarizer.hs
applicative-optparse-exercises/: README.md  applicative-optparse-exercises.cabal
applicative-optparse-exercises/app/: Main.hs
code_golf/: thanos.hs
crud/: crud.cabal  crud.db  dbcreate.sh  package.yaml
crud/app/: Main.hs
hhc/: README.md  hash.sha1  hhc.cabal  options.txt  sha1bfcracker.cabal
hhc/app/: Main.hs
hhc/src/: Benchmark.hs  Bruteforce.hs  Charset.hs  CommandLine.hs  Common.hs  Dictionary.hs  File.hs  Lib.hs  Rules.hs
hhc/test/: BruteforceSpec.hs  CharsetSpec.hs  DictionarySpec.hs  RulesSpec.hs  Spec.hs
microservices/: microservices.cabal
pwg/: .gitignore  ChangeLog.md  README.md  convert.sh  package.yaml  pwg-exe.prof  rebuild_and_run.sh  wallpaper.raw.xmp
pwg/app/: Main.hs
pwg/src/: Canvas.hs  Color.hs  Device.hs  Filters.hs  Generator.hs  Hex.hs
rpg/: package.yaml
sha1bfcracker/: README.md
